--- a/practica.ipynb
+++ b/practica.ipynb
@@ -13,7 +13,6 @@
    "metadata": {},
    "source": [
     "## 0. Introducción\n",
-    "### Introducción  \n",
     "\n",
     "En esta práctica de **Machine Learning**, se trabajará con un conjunto de datos de **Airbnb de Madrid** que contiene una gran cantidad de variables relacionadas con las propiedades ofrecidas en la plataforma. El objetivo principal es analizar y modelar estos datos para resolver un **problema de regresión**, cuyo propósito es **predecir el precio por noche** de las propiedades listadas en Airbnb.  \n",
     "\n",
@@ -944,6 +943,40 @@
    "metadata": {},
    "source": [
     "Le media del precio es de 73.561471. Esta medida se tendrá en cuenta cuando se entrene el modelo para comparar el error obtenido en la predicción del precio por noche en los airbnbs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuación, con el uso de Shape para el dataset, podemos ver las dimensiones del conjunto."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dimensiones del dataset son: (11824, 89)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Dimensiones del dataset son: {train.shape}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso, el modelo tiene 11824 filas y 89 columnas. \n",
+    "Tener un dataset con 89 características puede llevar a problemas como sobreajuste, mayor tiempo de cómputo, dificultad para interpretar resultados y la presencia de variables irrelevantes o redundantes.\n",
+    "\n",
+    "Para solucionarlo, es clave aplicar selección de características o eliminar variables poco relevantes o correlacionadas. Esto ayuda a simplificar el modelo, mejorar su rendimiento y facilitar su interpretación."
    ]
   },
   {
